fix: hide selection tooltip overflow

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -169,6 +169,7 @@ select.mini-select {
 .selection-tooltip {
   //border: thin solid #ddd;
   border-radius: 8px;
+  overflow: hidden;
   background: #fff;
   z-index: 100;
   width: 200px;
